# wt3

./: .env.example  .gitignore  Dockerfile  Dockerfile.signal  README.md  compose.yaml  pyproject.toml  requirements.signal.txt  requirements.txt  rofl.yaml  signal_service.pub  signal_service.tar.gz.age
scripts/: docker-run.sh  encrypt_signal_service.sh  signal_entrypoint.sh
src/: __init__.py
src/signal_service_example/: __init__.py  __main__.py
src/signal_service_example/api/: routes.py
src/signal_service_example/clients/: hl_client.py  market_data.py
src/signal_service_example/core/: momentum_strategy.py
src/wt3/: __init__.py  __main__.py
src/wt3/clients/: pnl.py  rofl.py  signal.py  social.py
src/wt3/core/: trading.py
src/wt3/core/orchestration/: __init__.py  pnl_handler.py  recap_handler.py  social_scheduler.py  state_management.py  trading_cycle.py
src/wt3/core/trading/: __init__.py  exceptions.py  exchange_client.py  market_data.py  order_management.py  signal_execution.py
src/wt3/prompts/: __init__.py  social_prompts_template.py
