[project]
name = "wt3"
version = "2.0.1"
description = "Wolf of Trading Tokens in TEE - Autonomous trading AI agent running in Intel TDX enclaves"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "tweepy==4.15.0",
    "hyperliquid-python-sdk==0.12.0",
    "python-dotenv==1.1.0",
    "emp-agents==0.3.3",
    "fast-depends==2.4.12",
    "httpx==0.27.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/wt3"]
